editor and table alignment fix

--- a/assets/global/style.css
+++ b/assets/global/style.css
@@ -4247,11 +4247,14 @@ div#sidebar:not(.active-nav) > a > i.bx.bx-menu {
 .course_module_content h4 {
 	font-size: 18px;
 }
-#course_module_content table, #case_module_content table, #chapter_module_content table{
+#course_module_content table, #course_module_content_preview table, #case_module_content table, #chapter_module_content table{
 	table-layout: fixed;
     word-break: break-all;
 }
-#course_module_content table img, #case_module_content table img, #chapter_module_content table img {
+#course_module_content br, #course_module_content_preview br, #case_module_content br, #chapter_module_content br{
+	clear: both;
+}
+#course_module_content table img, #course_module_content_preview table img, #case_module_content table img, #chapter_module_content table img {
 	height: 100% !important;
 	box-sizing: border-box;
 	max-width: 100%;
@@ -4542,7 +4545,7 @@ footer.fixed-bottom {
 .disable-click{
 	pointer-events: none;
 }
-#course_module_content p img, #course_module_content_preview p img{
+#course_module_content p img, #course_module_content_preview p img, #case_module_content p img, #chapter_module_content p img{
 	width: 100%;
 }
 #content-courseModule::-webkit-scrollbar {
@@ -4557,7 +4560,7 @@ footer.fixed-bottom {
     overflow: hidden;
     overflow-y: scroll;
 }
-#course_module_content .accordionlist object{
+#course_module_content .accordionlist object, #course_module_content_preview .accordionlist object, #case_module_content .accordionlist object, #chapter_module_content .accordionlist object{
 	width: 100%;
 }
 .bulbicon{
